--- a/About/style.css
+++ b/About/style.css
@@ -93,7 +93,13 @@ body {
     align-content: center;
     /* border: 1px solid #94999f; */
 }
-
+#container{
+    border: 1px solid;
+    width: 100%;
+    /* width: 100%; */
+    height: 8000px;
+    background-color: blue;
+}
 .nav-bottom {
     width: 75%;
 }
