--- a/About/nav-bar.css
+++ b/About/nav-bar.css
@@ -20,6 +20,7 @@ body {
     height: 65px;
     align-items: center;
     border: 1px solid #e9e9e9;
+    background-color: whitesmoke;
 }
 
 .social-contact {
@@ -92,15 +93,7 @@ body {
     /* align-items: center; */
     align-content: center;
     /* border: 1px solid #94999f; */
-}
-#nav-100vh{
-    width: 100%;
-    height: 100vh;
-    background-image: url('./images/bg-vernezza.jpg');
-    /* background-color: blue; */
-    background-position: center;
-    background-size: cover;
-    position: relative;
+    background-color: rgba(255, 255, 255, 0.817);
 }
 .nav-bottom {
     width: 75%;
