--- a/Destination/destination.css
+++ b/Destination/destination.css
@@ -1,35 +1,93 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
 }
 
 #destination-backimage {
     background-image: url('https://img.freepik.com/premium-photo/amazing-panorama-landscape-maldives-beach-tropical-beach-landscape-seascape-luxury-water-villa_663265-1879.jpg');
-height: 400px;
- width: 100%; 
-border: 1px solid;
-background-repeat: no-repeat;
- background-size: 100% 100%;  
-display: flex;
-flex-direction: column;
-/* justify-content: center; */
-align-items: center;
+    height: 400px;
+    width: 100%;
+    border: 1px solid;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
 
 }
 
-.Destination-content1{
- font-size: 60px; 
-font-weight: bold;
-font-family: Verdana, Geneva, Tahoma, sans-serif;
-color: rgb(0, 0, 0);
-letter-spacing: 5px;
-margin-top: 190px;
+.Destination-content1 {
+    font-size: 60px;
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(0, 0, 0);
+    letter-spacing: 5px;
+    margin-top: 190px;
 
 }
 
-.Destination-content2{
+.Destination-content2 {
     font-size: 30px;
     font-weight: bold;
     color: rgb(249, 247, 249);
-   margin-top: 20px;
-    }
+    margin-top: 20px;
+}
+
+.card {
+    height: 430px;
+   border: 1px solid green;
+   text-align: center;
+
+}
+
+
+
+
+
+
+
+
+.maincontainer {
+    width: 90%;
+    margin: 50px auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 40px;
+
+
+
+}
+
+#card_container {
+    height: 900px;
+    width: 100%;
+}
+
+.nationimage {
+    height: 320px;
+    width: 100%;
+
+}
+
+.tourbtn{
+   padding: 5px;
+   border-radius: 6px;
+border-style: none;
+   position: relative;
+   top: -310px;
+   left: 150px;
+   background-color: rgb(240, 96, 7);
+   color: aliceblue;
+}
+
+/* .nationHeading, .nationContent, .viewbtn{
+  display: none;
+} */
+/* .viewbtn:hover{
+    display: block;
+    background-color: aqua;
+}
+.card:hover{
+    display: none;
+} */
