--- a/About/nav-bar.css
+++ b/About/nav-bar.css
@@ -20,11 +20,12 @@ body {
     height: 65px;
     align-items: center;
     border: 1px solid #e9e9e9;
+    background-color: whitesmoke;
 }
 
 .social-contact {
     display: flex;
-    width: 83%;
+    width: 87%;
     align-items: center;
     justify-content: space-between;
     height: 100%;
@@ -49,7 +50,7 @@ body {
 }
 
 .login-signup {
-    width: 17%;
+    width: 13%;
     height: 100%;
     display: flex;
     justify-content: space-around;
@@ -92,8 +93,8 @@ body {
     /* align-items: center; */
     align-content: center;
     /* border: 1px solid #94999f; */
+    background-color: rgba(255, 255, 255, 0.817);
 }
-
 .nav-bottom {
     width: 75%;
 }
@@ -128,4 +129,20 @@ body {
     .nav-bottom{
         width: 97%;
     }
+}
+/* 750 - 1408 */
+
+@media all and (min-width:700px) and (max-width:1408px){
+    .log>p {
+        font-size: 15px;
+    }
+    .login-signup{
+        width: 24%;
+    }
+    .social-contact{
+        width: 76%;
+    }
+    .nav-bottom{
+        width: 85%;
+    } 
 }
