--- a/Destination/destination.css
+++ b/Destination/destination.css
@@ -35,7 +35,7 @@
 }
 
 .card {
-    height: 430px;
+    height: 450px;
    border: 1px solid green;
    text-align: center;
 
@@ -49,7 +49,7 @@
 
 
 .maincontainer {
-    width: 90%;
+    width: 65%;
     margin: 50px auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -65,8 +65,14 @@
 }
 
 .nationimage {
-    height: 320px;
+    height: 450px;
     width: 100%;
+
+}
+
+
+.nationimage:hover{
+    opacity: 0.7;
 
 }
 
@@ -75,19 +81,89 @@
    border-radius: 6px;
 border-style: none;
    position: relative;
-   top: -310px;
-   left: 150px;
+   top: -420px;
+   left: 160px;
    background-color: rgb(240, 96, 7);
    color: aliceblue;
 }
 
-/* .nationHeading, .nationContent, .viewbtn{
-  display: none;
-} */
+ .nationContent, .viewbtn{
+  opacity: 0;
+  position: relative;
+  top: -100px;
+  color: aliceblue;
+}
+
+.nationHeading{
+    position: relative;
+  top: -80px;
+  color:aliceblue ;
+}
+
+
 /* .viewbtn:hover{
     display: block;
     background-color: aqua;
-}
-.card:hover{
-    display: none;
 } */
+
+
+.card:hover .nationHeading{
+    opacity: 1;
+    transform: translateY(-150px);
+    transition: all;
+    transition-duration: 0.6s;
+    transition-timing-function: linear;
+} 
+
+.card:hover .nationContent{
+    opacity: 1;
+    transform: translateY(-150px);
+    transition: all;
+    transition-duration: 0.6s;
+    transition-timing-function: linear;
+} 
+
+
+.card:hover .viewbtn{
+    opacity: 1;
+    transform: translateY(-150px);
+    transition: all;
+    transition-duration: 0.6s;
+    transition-timing-function: linear;
+} 
+
+.card:hover{
+   
+    transform: scale(1.05);
+    transition: all;
+    transition-duration: 1s;
+    transition-timing-function: linear;
+}
+
+
+
+
+
+.nationHeading{
+    font-weight: bold;
+    font-size: 30px;
+    margin-top: -30px;
+    
+}
+
+.nationContent{
+    font-size: 20px; 
+    margin-top: 23px;
+}
+
+.viewbtn{
+    padding: 6px;
+    margin-top: 10px;
+    width: 40%;
+    font-size: 17px;
+    background-color: rgb(240, 108, 26);
+    color: aliceblue;
+    word-spacing: 3px;
+    border-style: none;
+    border-radius: 5px;
+}
