--- a/footer/footer.css
+++ b/footer/footer.css
@@ -4,7 +4,7 @@ body {
 }
 footer{
     width: 100%;
-    height: auto;
+    /* height: auto; */
     /* border: 1px solid black; */
 }
 .footer-child-1{
@@ -23,15 +23,19 @@ footer{
     color: white;
     background-color: #212121;
 }
-p{
+.footer-child-1>div>p, .footer-child-2>div>p{
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     font-family: 400;
     color: white;
 }
-h3{
+.footer-child-1>div>a{
+    text-decoration: none;
+    color: white;
+}
+.footer-child-1>div>h3{
     font-family: 'Poppins', sans-serif;
-    font-size: 20px;
+    font-size: 27px;
     font-family: 800;
     font-weight: bolder;
     color: white;
