--- a/Booking/body.css
+++ b/Booking/body.css
@@ -15,7 +15,7 @@
 }
 #nav-100vh{
     width: 100%;
-    height: 756px;
+    height: calc(100vh - 155px);
     background-image: url('./images/bg-vernezza.jpg');
     background-position: center;
     background-size: cover;
