--- a/Booking/style.css
+++ b/Booking/style.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Preahvihear&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
 * {
   padding: 0;
   margin: 0;
@@ -10,6 +14,7 @@
   background-size: cover;
   background-position: 55% 55%;
   font-family: "Kanit", sans-serif;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 #top > div:first-child {
@@ -65,7 +70,7 @@
   margin-right: 1.5rem;
 }
 #forms label{
-  font-size: 1.1rem;
+  font-size: 0.9rem;
   font-family: 'Poppins', sans-serif;
 }
 #body {
@@ -102,5 +107,115 @@ input::-webkit-inner-spin-button {
 #formcheck + label{
   color: blue;
   opacity: 0.8;
+}
+#submitdata{
+  margin-left: 0.5rem;
+}
+#body{
+  display: flex;
+  justify-content: space-between;
+}
+#payments{
+  width: 40%;
+  height: fit-content;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 2rem;
+  box-sizing: border-box;
+padding: 1.5rem;
+}
+#payments img{
+  width:100%;
+  border-radius: 2rem 2rem 0 0;
+}
+#payments #main{
+  box-sizing: border-box;
+  padding: 1.5rem;
+  background-color: whitesmoke;
+  border-radius: 0 0 2rem 2rem ;
+}
+#payments #main p{
+  height: 2rem;
+  font-size: 1.2rem;
+  font-family: 'Noto Serif', serif;
+}
+#payments #main p>span{
+  font-family: 'Prompt', sans-serif;
+  /* margin-left: 2rem; */
+}
+#payments #main button{
+  display: block;
+  margin: auto;
+  width: 50%;
+}
+
+/* Payment Confirmation */
+#payment-card-details{
+  margin-top: 2rem;
+}
+.paymentcardelem{
+  display: flex;
+  justify-content: space-between;
+  margin: 1.5rem 0;
+  font-family: 'Noto Serif', serif;
+  font-size: 1rem;
+}
+.paymentcardelem input{
+  width: 60%;
+  border-radius: 1rem;
+  box-sizing: border-box;
+  padding: 0.2rem 1rem;
+}
+
+#destinationcardscontainer{
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#destinationcard{
+  width: 30%;
+  box-sizing: border-box;
+  border-radius: 2rem;
+  padding: 2rem;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  background-color: rgb(238, 249, 250);
+}
+#imageBox img{
+  border-radius: 2rem ;
+  width: 100%;
+}
+#card-body{
+margin-top: 1rem;
+box-sizing: border-box;
+padding: 0 2rem;
+}
+#card-body > *{
+  text-align: center;
+  font-family: 'Preahvihear', sans-serif;
+  font-size: 1.2rem;
+  font-weight: Bold;
+}
+#card-body span{
+  font-family: 'Josefin Sans', sans-serif;
+  color: rgb(107, 5, 81);
+}
+#card-body > button{
+  display: block;
+  margin: auto;
+  font-family: 'Josefin Sans', sans-serif;
+}
+#destinationcardscontainer svg{
+width: 5rem;
+height: 5rem;
+color: rgb(4, 96, 96);
+}
+#destinationcardscontainer svg:hover{
+  color: rgb(9, 172, 115);
+}
+#dest-leftarrow{
+  margin-right: 4rem;
+}
+#dest-rightarrow{
+  margin-left: 4rem;
 }
 
