--- a/Destination/destination.css
+++ b/Destination/destination.css
@@ -18,7 +18,7 @@
 }
 
 .Destination-content1 {
-    font-size: 60px;
+    font-size: 70px;
     font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(0, 0, 0);
@@ -35,17 +35,13 @@
 }
 
 .card {
-    height: 450px;
-   border: 1px solid green;
-   text-align: center;
-
+    height: 430px;
+    border: 1px solid green;
+    text-align: center;
+    border-radius: 12px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    ;
 }
-
-
-
-
-
-
 
 
 .maincontainer {
@@ -65,39 +61,40 @@
 }
 
 .nationimage {
-    height: 450px;
+    height: 430px;
     width: 100%;
-
+    border-radius: 12px;
 }
 
 
-.nationimage:hover{
+.nationimage:hover {
     opacity: 0.7;
 
 }
 
-.tourbtn{
-   padding: 5px;
-   border-radius: 6px;
-border-style: none;
-   position: relative;
-   top: -420px;
-   left: 160px;
-   background-color: rgb(240, 96, 7);
-   color: aliceblue;
-}
-
- .nationContent, .viewbtn{
-  opacity: 0;
-  position: relative;
-  top: -100px;
-  color: aliceblue;
-}
-
-.nationHeading{
+.tourbtn {
+    padding: 5px;
+    border-radius: 6px;
+    border-style: none;
     position: relative;
-  top: -80px;
-  color:aliceblue ;
+    top: -400px;
+    left: 110px;
+    background-color: rgb(240, 96, 7);
+    color: aliceblue;
+}
+
+.nationContent,
+.viewbtn {
+    opacity: 0;
+    position: relative;
+    top: -100px;
+    color: aliceblue;
+}
+
+.nationHeading {
+    position: relative;
+    top: -80px;
+    color: aliceblue;
 }
 
 
@@ -107,33 +104,33 @@ border-style: none;
 } */
 
 
-.card:hover .nationHeading{
+.card:hover .nationHeading {
     opacity: 1;
     transform: translateY(-150px);
     transition: all;
     transition-duration: 0.6s;
     transition-timing-function: linear;
-} 
+}
 
-.card:hover .nationContent{
+.card:hover .nationContent {
     opacity: 1;
     transform: translateY(-150px);
     transition: all;
     transition-duration: 0.6s;
     transition-timing-function: linear;
-} 
+}
 
 
-.card:hover .viewbtn{
+.card:hover .viewbtn {
     opacity: 1;
     transform: translateY(-150px);
     transition: all;
     transition-duration: 0.6s;
     transition-timing-function: linear;
-} 
+}
 
-.card:hover{
-   
+.card:hover {
+
     transform: scale(1.05);
     transition: all;
     transition-duration: 1s;
@@ -144,26 +141,69 @@ border-style: none;
 
 
 
-.nationHeading{
+.nationHeading {
     font-weight: bold;
     font-size: 30px;
     margin-top: -30px;
-    
+
 }
 
-.nationContent{
-    font-size: 20px; 
+.nationContent {
+    font-size: 20px;
     margin-top: 23px;
 }
 
-.viewbtn{
+.viewbtn {
     padding: 6px;
     margin-top: 10px;
     width: 40%;
-    font-size: 17px;
+    font-size: 10px;
     background-color: rgb(240, 108, 26);
     color: aliceblue;
     word-spacing: 3px;
     border-style: none;
     border-radius: 5px;
 }
+
+/* ///////////////////////////////////////////////////////////////////////////////////////////////////////// ////////////*/
+
+/* country card css */
+.countrycontainer{
+    width: 65%;
+}
+
+.countrycontainer{
+display: grid;
+grid-template-columns: repeat(3, 1fr);
+grid-gap: 25px;
+margin: auto;
+
+}
+
+.countryimage{
+height: 270px;
+width: 100%;
+border-top-left-radius: 12px;
+border-top-right-radius: 12px;
+
+}
+
+
+.countrycard{
+    border-radius: 12px;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    height: 370px;
+    background-color: rgb(243, 232, 232);
+}
+
+.countryprice{
+    color: rgb(252, 134, 75);
+    margin: 7px;
+}
+
+.countryName{
+    color: rgb(252, 134, 75);
+    margin: 7px;
+}
+
+
