--- a/About/body.css
+++ b/About/body.css
@@ -1,5 +1,5 @@
 .about-us{
-    width: 30%;
+    width: 50%;
     text-align: center;
     position: absolute;
     top: 50%;
@@ -14,8 +14,8 @@
     font-size: 20px;
 }
 #nav-100vh{
-    width: 100%;
-    height: 756px;
+    width: 100%;    
+    height: calc(100vh - 155px);
     background-image: url('./images/bg-vernezza.jpg');
     background-position: center;
     background-size: cover;
@@ -24,16 +24,19 @@
 }
 
 #about-hero{
-    width: 100%;
-    height: 700px;
+    /* width: 100%; */
+    height: auto;
     display: flex;
     justify-content: center;
+    /* border: 1px solid; */
     align-items: center;
+    padding: 7% 0% 7% 0%;
 }
 .about-img-cont{
-    width: 75%;
+    width: 80%;
     display: flex;
-    height: 470px;
+    /* height: 100%; */
+    /* border: 1px solid; */
     gap: 3%;
     align-items: center;
 }
@@ -41,6 +44,7 @@
     width: 40%;
     display: flex;
     height: 100%;
+    /* border: 1px solid; */
     flex-direction: column;
     justify-content: space-between;
 }
@@ -52,9 +56,11 @@
     font-size: 50px;
 }
 .about-img{
-    height: 100%;
+    height: 470px;
     width: 60%;
     display: flex;
+    /* border: 1px solid; */
+    /* padding: 4% 0% 4% 0%; */
     gap: 4%;
 }
 .about-img>img:nth-child(1){
@@ -65,7 +71,7 @@
 }
 .about-img>img{
     border-radius: 16px;
-    width: 300px;
+    width: 270px;
     height: 400px;
 }
 .about-text>button{
@@ -84,20 +90,23 @@
     justify-content: center;
     align-items: center;
     background-color: #f8f9fa;
+    /* border: 1px solid; */
 }
 .testimonitals{
-    height: 500px; 
+    /* height: 500px;  */
     width: 75%;
     display: flex;
-    gap: 4%;
+    gap: 20px;
     justify-content: left;
     align-items: center;
+    /* border: 1px solid; */
 }
 .test{
     margin-top: 0px;
 }
 .test-crou-feedback{
     display: flex;
+    /* border: 1px solid; */
     flex-direction: column;
     height: 100%;
     width: 50%;
@@ -151,6 +160,7 @@
     display: flex;
     height: 100%;
     width: 60%;
+    /* border: 1px solid; */
     flex-direction: column;
 }
 #test-faq-ques>p{
@@ -218,4 +228,87 @@
     color: white;
     height: 45px;
     width: 10%;
+}
+/* 930 */
+@media all and (max-width: 1265px) {
+    .about-img-cont{
+        width: 97%;
+        gap: 30px;
+    }
+    .about-text{
+        width: 50%;
+    }
+    .about-img{
+        height: 400px;
+    }
+    .about-img>img{
+        /* width: 230px; */
+        width: 40%;
+        /* height: 350px; */
+        height: 250px;
+    }
+    .about-text>h1{
+        font-size: 30px;
+    }
+    .about-text>p:nth-child(1){
+        font-size: 20px;
+    }
+    .about-us>h1{
+        font-size: 60px;
+    }
+    .about-us>p{
+        font-size: 19px;
+    }
+    .about-us{
+        width: 50%;
+    }
+    .testimonitals{
+        width: 97%;
+    }
+    .begin-btn>button{
+        width: 15%;
+    }
+}
+@media all and (max-width: 925px){
+    .about-img-cont{
+        flex-direction: column ;
+    }
+    .about-img-cont>div{
+        width: 100%;
+    }
+    .about-img{
+        justify-content: center;
+        height: 350px;
+    }
+    .testimonitals{
+        flex-direction: column;
+    }
+    .test-crou-feedback{
+        width: 100%;
+    }
+    #test-faq-ques{
+        width: 100%;
+    }
+    .begin-btn{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+        gap: 10px;
+    }
+    .begin-btn>p{
+        font-size: 25px;
+    }
+    .begin-btn>button{
+        width: 25%;
+    }
+    .about-us>h1{
+        font-size: 45px;
+    }
+    .about-us>p{
+        font-size: 16px;
+    }
+    .about-us{
+        width: 70%;
+    }
 }
