--- a/About/nav-bar.css
+++ b/About/nav-bar.css
@@ -114,11 +114,11 @@ body {
     }
 
     .login-signup {
-        width: 30%;
+        width: 45%;
     }
 
     .social-contact {
-        width: 70%;
+        width: 55%;
     }
 
     .logi>p {
@@ -130,7 +130,7 @@ body {
 }
 /* 750 - 1408 */
 
-@media all and (min-width:700px) and (max-width:1408px){
+@media all and (min-width:750px) and (max-width:1308px){
     .logi>p {
         font-size: 15px;
     }
@@ -146,4 +146,17 @@ body {
 }
 .logi>button{
     font-weight: bold;
+}
+@media all and (max-width:450px) {
+    .login-signup{
+        width: 70%;
+        /* border: 1px solid red; */
+        /* font-weight: normal; */
+    }
+    .nav-social{
+        width: 30%;
+    }
+    .logi>p{
+        font-size: 10px;
+    }
 }
