--- a/Booking/style.css
+++ b/Booking/style.css
@@ -27,6 +27,25 @@
 }
 #destination {
   display: block;
+  /* text-align: left; */
+  overflow: hidden; 
+  border-right: 2px solid orange; 
+  white-space: nowrap; 
+  /* margin: 0 auto; */
+  animation: 
+    typing 3.5s steps(40, end) infinite,
+    blink-caret .75s step-end infinite;
+}
+
+@keyframes typing {
+  from { width: 0 }
+  to { width: 50% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  /* 50% { border-color: orange; } */
 }
 #progress {
   height: 30%;
@@ -36,6 +55,7 @@
   flex-wrap: wrap;
   column-gap: 4rem;
   font-size: 1.2rem;
+  
 }
 .border-box {
   box-sizing: border-box;
