--- a/Destination/destination.css
+++ b/Destination/destination.css
@@ -4,8 +4,8 @@
 }
 
 #destination-backimage {
-    background-image: url('https://img.freepik.com/premium-photo/amazing-panorama-landscape-maldives-beach-tropical-beach-landscape-seascape-luxury-water-villa_663265-1879.jpg');
-    height: 400px;
+    background-image: url('https://cdn.pixabay.com/photo/2017/01/14/13/59/castelmezzano-1979546_1280.jpg');
+    height: 600px;
     width: 100%;
     border: 1px solid;
     background-repeat: no-repeat;
@@ -15,13 +15,21 @@
     /* justify-content: center; */
     align-items: center;
 
+
+}
+
+#destination-backimage:hover .Destination-content1 {
+    transform: scale(1.2);
+    transition: all 1.5s linear;
+    color: rgb(250, 248, 165);
+
 }
 
 .Destination-content1 {
     font-size: 70px;
     font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: rgb(0, 0, 0);
+    color: white;
     letter-spacing: 5px;
     margin-top: 190px;
 
@@ -281,6 +289,11 @@ border-top-right-radius: 12px;
     /* box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px; */
     height: 470px;
     background-color: rgb(243, 232, 232);
+}
+
+.countrycard:hover{
+    transform: scale(1.05);
+    transition: all 1s linear;
 }
 
 .countryprice{
