--- a/homeStyle.css
+++ b/homeStyle.css
@@ -138,6 +138,20 @@ section{
 .homeBookLeftCard p{
     color: #7a7e82;
 }
+.homeBookLeftCard {
+    position: relative;
+    text-align: left; /* Center text and inline elements */
+  }
+  
+  .HomeNextBookIcon {
+    position: absolute;
+    top: 50%;
+    padding-left: 20px; /* Adjust the right distance as needed */
+    transform: translateY(-50%); /* Center vertically */
+    cursor: pointer;
+    height: 30px
+  }
+  
 .HomeBookingsCards .HomeBookingsCardsRight{
     flex: 60%;
     padding: 2%;
@@ -146,6 +160,17 @@ section{
 }
 .HomeBookingsCardsRight .homeBookLeftCard{
     margin-top: 4%;
+}
+.HomeBookingsCardsRight p{
+  width: 90%;
+}
+#HomeNextBookIconRight{
+    position: absolute;
+    top: 50%;
+    padding-left: 60%; /* Adjust the right distance as needed */
+    transform: translateY(-50%); /* Center vertically */
+    cursor: pointer;
+    height: 30px
 }
 .HomeBookingsCardsRight .homeBookBtns{
     display: flex;
