--- a/Destination/destination.css
+++ b/Destination/destination.css
@@ -4,8 +4,8 @@
 }
 
 #destination-backimage {
-    background-image: url('https://img.freepik.com/premium-photo/amazing-panorama-landscape-maldives-beach-tropical-beach-landscape-seascape-luxury-water-villa_663265-1879.jpg');
-    height: 400px;
+    background-image: url('https://cdn.pixabay.com/photo/2016/11/23/13/45/city-light-1852925_1280.jpg');
+    height: 600px;
     width: 100%;
     border: 1px solid;
     background-repeat: no-repeat;
@@ -15,15 +15,25 @@
     /* justify-content: center; */
     align-items: center;
 
+
 }
 
+#destination-backimage:hover .Destination-content1{
+    transform: scale(1.05);
+    transition: all 1s linear;
+    color: rgb(252, 216, 170);
+}
+
+
+
 .Destination-content1 {
-    font-size: 70px;
+    font-size: 65px;
     font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: rgb(0, 0, 0);
+    color: white;
     letter-spacing: 5px;
     margin-top: 190px;
+
 
 }
 
@@ -56,6 +66,8 @@
 
 
 }
+
+
 
 
 @media (max-width: 1000px){
@@ -304,7 +316,7 @@ border-top-right-radius: 12px;
 
 .booknow{
     height: 40px;
-    width: 25%;
+    width: 32%;
     border-radius: 8px;
     background-color: rgb(240, 96, 7);
     border-style: none;
